--- a/war/js/views/planboard.html
+++ b/war/js/views/planboard.html
@@ -312,7 +312,7 @@
 
 
         <!-- timelines -->
-        <div class="tab-pane" id="timelineTab">
+        <div class="tab-pane active" id="timelineTab">
           <!-- timeline -->
           <div id="timeline">
             <!-- timeline-toolbar -->
@@ -460,7 +460,7 @@
 
 
         <!-- statistics -->
-        <div class="tab-pane active" id="statisticsTab">
+        <div class="tab-pane" id="statisticsTab">
 
           <!-- timeline toolbar -->
           <div id="timeline-toolbar">
