--- a/sass/app/_dashboard.scss
+++ b/sass/app/_dashboard.scss
@@ -111,8 +111,8 @@
         // padding: 10px;
         overflow: hidden;
 
-        padding-bottom: 15px;
-        // height: 100%;
+        // padding-bottom: 5px;
+        height: 100%;
 
         &:nth-child(odd) {
           background-color: #f2f1ed;
@@ -130,11 +130,6 @@
           h4 {
             margin: 15px 0 20px 15px;
           }
-        }
-
-        footer {
-          margin: 0;
-          padding-left: 15px;
         }
 
         .blocks {
@@ -268,6 +263,66 @@
             }
           }
           
+        }
+
+        footer {
+          margin: 0;
+          padding-left: 15px;
+          overflow: hidden;
+
+          .shorter {
+            display: inline-block;
+            width: 100%;
+            height: 21px;
+          }
+
+          .shortages {
+            margin-top: -30px;
+
+            .span4 {
+              padding-right: 40px;
+
+              h4 {
+                margin-left: -30px;
+                margin-bottom: 5px;
+                font-size: 14px;
+              }
+
+              ul {
+                margin-left: -30px;
+                padding-right: 20px;
+                margin-bottom: 20px;
+
+                li {
+                  padding: 5px;
+                  
+                  &:first-child {
+                    border-top: 1px solid #ddd;
+                  }
+                  
+                  &:last-child {
+                    border-bottom: 1px solid #ddd;
+                  }
+
+                  .label {
+                    margin-right: 5px;
+                  }
+
+                  h5 {
+                    display: inline;
+                    font-size: 12px;
+                  }
+
+                  button {
+                    padding-left: 2px;
+                    padding-right: 2px;
+                  }
+                }
+              }
+
+
+            }
+          }
         }
 
       }
