--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -16,9 +16,11 @@
         </div>
         <hr>
 
+        <p ng-show="loading.pies">Loading and analyzing group overviews..</p>
+
         <!-- pie loop -->
-        <ul id="pies">
-          <li ng-repeat="pie in pies">
+        <ul id="pies" ng-hide="loading.pies">
+          <li ng-repeat="pie in pies | orderBy:'shortages.total':true">
 
             <header>
               <h4>{{pie.name}}</h4>
@@ -28,10 +30,10 @@
               <div class="span4">
                 <div class="block">
                   <div class="icon">
-                    <div class="scoreboard {{pie.weeks.current.state.cls}}">
-                      <span class="state">{{pie.weeks.current.state.diff + pie.weeks.current.state.wish}}</span>
+                    <div class="scoreboard {{pie.state.cls}}">
+                      <span class="state">{{pie.state.diff + pie.state.wish}}</span>
                       <span class="seperator">/</span>
-                      <span class="wish">{{pie.weeks.current.state.wish}}</span>
+                      <span class="wish">{{pie.state.wish}}</span>
                       <!-- <span class="state">14</span>
                       <span class="seperator">/</span>
                       <span class="wish">20</span> -->
@@ -40,10 +42,10 @@
                   <div class="body">
                     <h3>Huidige status</h3>
                     <hr>
-                    <h5>{{pie.weeks.current.state.start}}</h5> 
+                    <h5>{{pie.state.start}}</h5> 
                     <small class="muted"> van</small>
                     <br>
-                    <h5>{{pie.weeks.current.state.end}}</h5> 
+                    <h5>{{pie.state.end}}</h5> 
                     <small class="muted"> tot</small>
                   </div>
                 </div>
@@ -92,21 +94,69 @@
             </div>
 
             <footer>
-              <div class="btn-group">
-                <button class="btn btn-mini dropdown-toggle {{(pie.weeks.current.shortages.length > 0) && 'disabled'}}" 
-                        data-toggle="dropdown">Shortages <span class="caret"></span></button>
-                <ul class="dropdown-menu">
-                  <li ng-repeat="shortage in pie.weeks.current.shortages">{{shortage}}</li>
-                </ul>
+
+              <div class="shorter" ng-show="pie.shortages.current.length > 0 || pie.shortages.next.length > 0">
+                <div class="btn-group">
+                  <button class="btn btn-mini"
+                          ng-click="shortageHolders['shortages-' + pie.id] = true"
+                          ng-hide="shortageHolders['shortages-' + pie.id]">
+                          Tekorten ({{pie.shortages.total}}) <i class="icon-chevron-down"></i>
+                  </button>
+                  <button class="btn btn-mini"
+                          ng-click="shortageHolders['shortages-' + pie.id] = false"
+                          ng-show="shortageHolders['shortages-' + pie.id]">
+                          Tekorten ({{pie.shortages.total}}) <i class="icon-chevron-up"></i>
+                  </button>
+                </div>
               </div>
+
+              <span style="font-size: 0;">
+                {{shortageHolders['shortages-' + pie.id]}}
+              </span>
+
+              <div id="shortages-{{pie.id}}" 
+                    class="shortages span12" 
+                    ng-show="pie.weeks.current.shortages.length > 0 || pie.weeks.next.shortages.length > 0"
+                    ng-hide="shortageHolders['shortages-' + pie.id] == false">
+
+                <div class="span4 offset4" ng-show="pie.shortages.current.length > 0">
+                  <h4>This week shortages</h4>
+                  <ul>
+                    <li ng-repeat="shortage in pie.shortages.current">
+                      <span class="label">{{shortage.diff}}</span>
+                      <h5>{{shortage.start * 1000 | nicelyDate}}</h5> 
+                      <small class="muted">van</small>, 
+                      <h5>{{shortage.end * 1000 | nicelyDate}}</h5> 
+                      <small class="muted">tot</small>
+                      <button class="btn btn-mini pull-right"><i class="icon-chevron-right"></i></button>
+                    </li>
+                  </ul>
+                </div>
+                
+                <div class="span4" ng-show="pie.shortages.next.length > 0">
+                  <h4>Next week shortages</h4>
+                  <ul>
+                    <li ng-repeat="shortage in pie.shortages.next">
+                      <span class="label">{{shortage.diff}}</span>
+                      <h5>{{shortage.start * 1000 | nicelyDate}}</h5> 
+                      <small class="muted">van</small>, 
+                      <h5>{{shortage.end * 1000 | nicelyDate}}</h5> 
+                      <small class="muted">tot</small>
+                      <button class="btn btn-mini pull-right"><i class="icon-chevron-right"></i></button>
+                    </li>
+                  </ul>
+                </div>
+
+              </div>
+
             </footer>
 
           </li>
         </ul>
         <!-- end pie loop -->
 
-        <hr class="lastline">
-        <p>
+        <hr class="lastline" ng-hide="loading.pies">
+        <p ng-hide="loading.pies">
           <small class="pull-right">
             <span class="text-warning">Periods: </span>
             <span class="muted">
@@ -131,8 +181,10 @@
         </div>
         <hr>
 
+        <p ng-show="loading.alerts">Loading p2000 alerts..</p>
+
         <!-- p2000 loop -->
-        <ul id="announcements">
+        <ul id="announcements" ng-hide="loading.alerts">
           <li ng-repeat="alarm in alarms.list">
             <table>
               <tr>
