--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -12,7 +12,10 @@
 
         <div class="head">
           <h4>Overzicht</h4>
-          <button class="btn btn-small" bs-modal="'js/views/elements/widget-pies.html'"><i class="icon-cog"></i></button>
+          <button class="btn btn-small" 
+                  bs-popover="'js/views/elements/widget-pies.html'" 
+                  data-placement="bottom"
+                  data-title="Overzicht instellingen"><i class="icon-cog"></i></button>
         </div>
         <hr>
 
@@ -24,6 +27,7 @@
 
             <header>
               <h4>{{pie.name}}</h4>
+              <button class="btn btn-mini pull-right"><i class="icon-remove"></i></button>
             </header>
 
             <div class="blocks">
@@ -110,9 +114,7 @@
                 </div>
               </div>
 
-              <span style="font-size: 0;">
-                {{shortageHolders['shortages-' + pie.id]}}
-              </span>
+              <span class="remove">{{shortageHolders['shortages-' + pie.id]}}</span>
 
               <div id="shortages-{{pie.id}}" 
                     class="shortages span12" 
@@ -120,7 +122,7 @@
                     ng-hide="shortageHolders['shortages-' + pie.id] == false">
 
                 <div class="span4 offset4" ng-show="pie.shortages.current.length > 0">
-                  <h4>This week shortages</h4>
+                  <h4>This week shortages ({{pie.shortages.current.length}})</h4>
                   <ul>
                     <li ng-repeat="shortage in pie.shortages.current">
                       <span class="label">{{shortage.diff}}</span>
@@ -134,7 +136,7 @@
                 </div>
                 
                 <div class="span4" ng-show="pie.shortages.next.length > 0">
-                  <h4>Next week shortages</h4>
+                  <h4>Next week shortages ({{pie.shortages.next.length}})</h4>
                   <ul>
                     <li ng-repeat="shortage in pie.shortages.next">
                       <span class="label">{{shortage.diff}}</span>
