hot fix for deleting new added timeslot with mouse in timeline & first stage in default wish value for groups in group view & added new profile -> knrmtest

--- a/war/js/views/groups.html
+++ b/war/js/views/groups.html
@@ -347,6 +347,10 @@
                   placeholder="{{ui.groups.filterMembers}}" 
                   style="margin-right:5px"
                   ng-model="filtered">
+
+          <button type="button"
+                  class="btn"><span class="badge badge-inverse">2</span> Behoefte</button>
+
           <button type="button" 
                   ng-click="editGroup(group)" 
                   style="margin-right:5px"
