completed views for default wish setting & setting option (working) for first group to render

--- a/war/js/views/groups.html
+++ b/war/js/views/groups.html
@@ -342,6 +342,7 @@
         </div>
         <!-- end groups list -->
         <div class="pull-right">
+
           <input type="text" 
                   class="span2 search-query" 
                   placeholder="{{ui.groups.filterMembers}}" 
@@ -349,7 +350,11 @@
                   ng-model="filtered">
 
           <button type="button"
-                  class="btn"><span class="badge badge-inverse">2</span> Behoefte</button>
+                  class="btn"
+                  style="margin-right:5px"
+                  bs-popover="'js/views/elements/groups-wish.html'" 
+                  data-placement="bottom"
+                  data-title="Behoefte wijzigen"><span class="badge badge-inset" ng-show="wished">{{wish}}</span> Behoefte</button>
 
           <button type="button" 
                   ng-click="editGroup(group)" 
@@ -358,6 +363,7 @@
           <button type="button" 
                   ng-click="deleteGroup(group.uuid)" 
                   class="btn btn-danger"><i class="icon-trash icon-white"></i> {{ui.groups.deleteGroup}}</button>
+
         </div>
       </div>
       <hr>
