--- a/war/js/views/settings.html
+++ b/war/js/views/settings.html
@@ -48,18 +48,7 @@
               <label class="control-label">Google account</label>
               <button class="btn btn-success" 
                       type="button"
-                      ng-click="authGoogle(settings.user.google)">Authorize</button>
-
-              <!-- <div class="input-append">
-                <input  class="span3"
-                        type="text"
-                        ng-model="settings.user.google">
-                <button class="btn btn-success" 
-                        type="button"
-                        ng-click="authGoogle(settings.user.google)">Authorize</button>
-
-              </div> -->
-
+                      ng-click="authGoogle()">Authorize</button>
             </div>
 
             <br>
