--- a/sass/app/_styles.scss
+++ b/sass/app/_styles.scss
@@ -83,6 +83,13 @@ dl {
 }
 
 
+.label-inset,
+.badge-inset {
+  background-color: #6f9a6d;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.30);
+}
+
+
 .modal-body {
   ul {
     list-style: none;
@@ -134,6 +141,21 @@ dl {
 
     p + h4 {
       margin-top: 28px;
+    }
+  }
+}
+
+
+#groups-wish {
+  form {
+    margin-top: 15px;
+
+    input[type=text] {
+      margin-right: 15px;
+    }
+
+    button {
+      margin-right: 5px;
     }
   }
 }
