--- a/war/js/views/dashboard.html
+++ b/war/js/views/dashboard.html
@@ -175,7 +175,7 @@
 
       <!-- announcements sidebar -->
       <div class="widget {{(!browser.mobile) && 'span3' || 'span12'}}"
-            style="{{(browser.mobile) && 'margin-left: 0;'}}"
+            style="{{(browser.mobile) && 'margin-left: 0'}}"
             ng-show="config.profile.p2000.status">
 
         <div class="head">
