--- a/war/js/views/planboard.html
+++ b/war/js/views/planboard.html
@@ -91,9 +91,6 @@
   <!-- end timeline controls -->
 
 
-
-
-
   <!-- slot controls -->
   <div class="row-fluid" ng-show="views.slot.add || views.slot.edit || views.group || views.wish || views.member">
 
@@ -113,7 +110,23 @@
       <hr>
 
       <!-- slot start -->
-      <div class="form-elements-group">
+      <div class="form-elements-group" ng-show="browser.mobile">
+        <label>{{ui.planboard.from}}</label>
+        <!-- date -->
+        <div class="control-group dater-mobile" ng-show="views.slot.add || views.slot.edit || views.wish">
+          <input  name="date-start" 
+                  type="datetime"
+                  ng-model="slot.start.datetime">
+        </div>
+        <div class="control-group dater-mobile" ng-show="views.group || views.member">
+          <input  name="date-start" 
+                  type="datetime"
+                  ng-model="slot.start.datetime"
+                  disabled>
+        </div>
+        <!-- end date -->
+      </div>
+      <div class="form-elements-group" ng-hide="browser.mobile">
         <label>{{ui.planboard.from}}</label>
         <!-- date -->
         <div class="control-group dater" ng-show="views.slot.add || views.slot.edit || views.wish">
@@ -152,7 +165,23 @@
       <!-- end slot start -->
 
       <!-- slot end -->
-      <div class="form-elements-group">
+      <div class="form-elements-group" ng-show="browser.mobile">
+        <label>{{ui.planboard.from}}</label>
+        <!-- date -->
+        <div class="control-group dater-mobile" ng-show="views.slot.add || views.slot.edit || views.wish">
+          <input  name="date-start" 
+                  type="datetime"
+                  ng-model="slot.end.datetime">
+        </div>
+        <div class="control-group dater-mobile" ng-show="views.group || views.member">
+          <input  name="date-start" 
+                  type="datetime"
+                  ng-model="slot.end.datetime"
+                  disabled>
+        </div>
+        <!-- end date -->
+      </div>
+      <div class="form-elements-group" ng-hide="browser.mobile">
         <label>{{ui.planboard.till}}</label>
         <!-- date -->
         <div class="control-group dater" ng-show="views.slot.add || views.slot.edit || views.wish">
@@ -281,8 +310,7 @@
     </form>
   </div>
   <!-- end slot controls -->
-
-
+  
 
 
   <!-- timelines & statistics -->
