--- a/war/js/views/groups.html
+++ b/war/js/views/groups.html
@@ -304,7 +304,7 @@
                 </span>
               </td>
               <td>
-                <select style="margin:0" 
+                <select style="margin:0; width: 160px;" 
                         ng-model="candidate.group" 
                         ng-options="group.name for group in data.groups">
                   <option value="">{{ui.groups.selectGroup}}</option>
