--- a/sass/app/_styles.scss
+++ b/sass/app/_styles.scss
@@ -1,3 +1,12 @@
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak],
+.ng-cloak, .x-ng-cloak {
+  display: none;
+}
+
+ng\:form {
+  display: block;
+}
+
 html,body {
   margin:0;
 }
@@ -183,4 +192,6 @@ dl {
 }
 
 
-
+// .navbar, #footer, #notification, #mobile-status-bar {
+//   display: none;
+// }
